--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                             </div>
                             <div class="ci-text">
                               <h4>Etudes</h4>
-                              <p>Comme indiqué précédement j'étudie aciduement pour obtenir mon diplôme.</p>
+                              <p>Comme indiqué précédement j'étudie assiduement pour obtenir mon diplôme.</p>
                             </div>
                           </div>
                           <div class="info-block-w-icon">
@@ -238,7 +238,7 @@
                             </div>
                             <div class="ci-text">
                               <h4>Jeux-video</h4>
-                              <p>Comme beaucoup je joue beaucoup mais celà ne m'empêche pas d'être créatif notamment sur Minecraft.</p>
+                              <p>Comme beaucoup je joue mais celà ne m'empêche pas d'être créatif notamment sur Minecraft.</p>
                             </div>
                           </div>
                           <div class="info-block-w-icon">
