Stage 1ère année

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                   <span class="link-text">CV</span>
                 </a>
               </li>
-              <!--<li>
+              <li>
                 <a href="#portfolio" class="nav-anim">
                   <span class="menu-icon lnr lnr-briefcase"></span>
-                  <span class="link-text">Portfolio</span>
+                  <span class="link-text">Stages</span>
                 </a>
-              </li>-->
+              </li>
               <!--<li>
                 <a href="#blog" class="nav-anim">
                   <span class="menu-icon lnr lnr-book"></span>
@@ -257,7 +257,7 @@
 
                   <div class="white-space-30"></div>
 
-                  <!-- Testimonials
+                  <!--Testimonials
                   <div class="row">
                     <div class="col-xs-12 col-sm-12">
                       <div class="block-title">
@@ -328,7 +328,7 @@
                       </div>
                     </div>
                   </div>
-                   End of Testimonials -->
+                   End of Testimonials-->
 
                   <!--<div class="white-space-50"></div>-->
 
@@ -507,7 +507,7 @@
               <section data-id="resume" class="animated-section">
                 <div class="section-content">
                   <div class="page-title">
-                    <h2><strong>C</strong>urriculum <strong>V</strong>itae</h2>
+                    <h2><strong>C</strong>urriculum <span><strong>V</strong>itae</span></h2>
                   </div>
 
                   <div class="row">
@@ -718,29 +718,28 @@
               </section>
               <!-- End of Resume Subpage -->
 
-              <!-- Portfolio Subpage
+              <!-- Portfolio Subpage -->
               <section data-id="portfolio" class="animated-section">
                 <div class="section-content">
                   <div class="page-title">
-                    <h2>Portfolio</h2>
+                    <h2>Mes <span>stages</span></h2>
                   </div>
 
                   <div class="row">
                     <div class="col-xs-12 col-sm-12">
-                       Portfolio Content
                       <div class="portfolio-content">
 
                         <ul class="portfolio-filters">
                           <li class="active">
-                            <a class="filter btn btn-sm btn-link" data-group="category_all">All</a>
+                            <a class="filter btn btn-sm btn-link" data-group="category_all">Tous</a>
                           </li>
                           <li>
-                            <a class="filter btn btn-sm btn-link" data-group="category_detailed">Detailed</a>
+                            <a class="filter btn btn-sm btn-link" data-group="category_1">1ère année</a>
                           </li>
                           <li>
-                            <a class="filter btn btn-sm btn-link" data-group="category_mockups">Mockups</a>
+                            <a class="filter btn btn-sm btn-link" data-group="category_2">2ème année</a>
                           </li>
-                          <li>
+                          <!--<li>
                             <a class="filter btn btn-sm btn-link" data-group="category_soundcloud">SoundCloud</a>
                           </li>
                           <li>
@@ -748,85 +747,97 @@
                           </li>
                           <li>
                             <a class="filter btn btn-sm btn-link" data-group="category_youtube-videos">YouTube Videos</a>
-                          </li>
+                          </li>-->
                         </ul>
 
-                         Portfolio Grid
-                        <div class="portfolio-grid three-columns">
-                          
-                          <figure class="item lbaudio" data-groups='["category_all", "category_soundcloud"]'>
-                            <div class="portfolio-item-img">
-                              <img src="img/portfolio/1.jpg" alt="SoundCloud Audio" title="" />
-                              <a href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/221650664&#038;color=%23ff5500&#038;auto_play=false&#038;hide_related=false&#038;show_comments=true&#038;show_user=true&#038;show_reposts=false&#038;show_teaser=true&#038;visual=true" class="lightbox mfp-iframe" title="SoundCloud Audio"></a>
+                         <!--Portfolio Grid-->
+                        <div class="portfolio-grid one-column">
+                          <!--1ère année-->
+                          <figure class="item" data-groups='["category_all", "category_1"]'>
+                            <div class="flex-column">
+                              <!--Présentation tobeweb-->
+                              <div class="container">
+                                <h2 class="vcentered">Stage de 1ère année</h2>
+                                <br>
+                                <div class="row">
+                                  <div class="col">
+                                    <h4>Présentation de <strong>ToBeWeb</strong></h4>
+                                    <p>
+                                      ToBeWeb est une entreprise de développement web israélienne basée à Jérusalem. Grâce à ses 10 ans d’expérience et sa multitude de projets achevés,
+                                      elle a su obtenir la confiance de certaines sociétés telles que Optical Center ou encore Jérusalem-Rent.
+                                    </p>
+                                  </div>
+                                  <div class="col">
+                                    <img src="img/tobeweblogo.png">
+                                  </div>
+                                </div>
+                                <br>
+                                <div class="row">
+                                  <div class="col">
+                                    <img src="img/portfolio/lead.jpg">
+                                  </div>
+                                  <div class="col">
+                                    <h4>Le projet</h4>
+                                    <p>
+                                      Pendant ce stage de 5 semaines nous allons devoir réaliser un site web dans le but de générer des leads. Mais qu’est-ce-qu’un lead?
+                                      C’est tout simplement la récupération des coordonnées d’un prospect et d’informations pertinentes sur un sujet grâce à un formulaire sur un site web.
+                                      Dans notre cas il s’agit de créer un site autour de la pompe à chaleur et des aides que l’Etat peut fournir à certaines personnes.
+                                      <!--utile pour le tableau de compétence-->
+                                      <!--<a href="" onclick="window.open('img/portfolio/usecase.png','targetWindow', 'toolbar=no, location=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1090px, height=550px, top=25px left=120px'); return false;">click here</a>-->
+                                    </p>
+                                  </div>
+                                </div>
+                                <br>
+                                <br>
+                                <div class="row">
+                                  <div class="col">
+                                    <h4>L'expression des besoins</h4>
+                                    <p>
+                                      Après une analyse du contexte, nous en avons conclu une liste de besoins:
+                                    </p>
+                                    <ul>
+                                      <li>Une interface qui doit-être attrayante pour les futurs utilisateurs</li>
+                                      <li>Une base de données qui servira à stocker les différents formulaires remplis par les prospects</li>
+                                      <li>Un système de vérification du mail et du numéro de téléphone dans le formulaire</li>
+                                      <li>Un système d’envoi de mail après validation du formulaire</li>
+                                    </ul>
+                                  </div>
+                                  <div class="col">
+                                    <h3>Diagrame de cas d'utilisation du site web</h3>
+                                    <br>
+                                    <img src="img/portfolio/usecase.png" style="width: 100%; height: auto;">
+                                  </div>
+                                </div>
+                                <br>
+                                <div class="row">
+                                  <div class="col">
+                                    <a class="fw-button-row" href="http://partenaire-environnement.fr/" target="_blank">Le site peut être consulté ici</a>
+                                  </div>
+                                </div>
+                                <br>
+                              </div>
                             </div>
-
-                            <i class="fa fa-volume-up"></i>
-                            <h4 class="name">SoundCloud Audio</h4>
-                            <span class="category">SoundCloud</span>
                           </figure>
 
-                          <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
+
+
+                          <!--2ème année-->
+                          <!--<figure class="item standard" data-groups='["category_all", "category_2"]'>
                             <div class="portfolio-item-img">
                               <img src="img/portfolio/2.jpg" alt="Media Project 2" title="" />
                               <a href="portfolio-1.html" class="ajax-page-load"></a>
                             </div>
-
-                            <i class="far fa-file-alt"></i>
                             <h4 class="name">Detailed Project 2</h4>
                             <span class="category">Detailed</span>
                           </figure>
-
-                          <figure class="item lbvideo" data-groups='["category_all", "category_vimeo-videos"]'>
-                            <div class="portfolio-item-img">
-                              <img src="img/portfolio/3.jpg" alt="Vimeo Video 1" title="" />
-                              <a href="https://player.vimeo.com/video/158284739" class="lightbox mfp-iframe" title="Vimeo Video 1"></a>
-                            </div>
-
-                            <i class="fas fa-video"></i>
-                            <h4 class="name">Vimeo Video 1</h4>
-                            <span class="category">Vimeo Videos</span>
-                          </figure>
-
-                          <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
-                            <div class="portfolio-item-img">
-                              <img src="img/portfolio/4.jpg" alt="Media Project 1" title="" />
-                              <a href="portfolio-1.html" class="ajax-page-load"></a>
-                            </div>
-
-                            <i class="far fa-file-alt"></i>
-                            <h4 class="name">Detailed Project 1</h4>
-                            <span class="category">Detailed</span>
-                          </figure>
-
-                          <figure class="item lbimage" data-groups='["category_all", "category_mockups"]'>
-                            <div class="portfolio-item-img">
-                              <img src="img/portfolio/5.jpg" alt="Mockup Design 1" title="" />
-                              <a class="lightbox" title="Mockup Design 1" href="img/portfolio/full/5.jpg"></a>
-                            </div>
-
-                            <i class="far fa-image"></i>
-                            <h4 class="name">Mockup Design 1</h4>
-                            <span class="category">Mockups</span>
-                          </figure>
-
-                          <figure class="item lbvideo" data-groups='["category_all", "category_youtube-videos"]'>
-                            <div class="portfolio-item-img">
-                              <img src="img/portfolio/6.jpg" alt="YouTube Video 1" title="" />
-                              <a href="https://www.youtube.com/embed/bg0gv2YpIok" class="lightbox mfp-iframe" title="YouTube Video 1"></a>
-                            </div>
-
-                            <i class="fas fa-video"></i>
-                            <h4 class="name">YouTube Video 1</h4>
-                            <span class="category">YouTube Videos</span>
-                          </figure>
-                        </div>
+                        </div>-->
                       </div>
-                       End of Portfolio Content
+                       <!--End of Portfolio Content-->
                     </div>
                   </div>
                 </div>
               </section>
-               End of Portfolio Subpage -->
+              <!-- End of Portfolio Subpage -->
 
               <!-- Blog Subpage
               <section data-id="blog" class="animated-section">
@@ -1039,6 +1050,10 @@
 
       </div>
     </div>
+
+    <script>
+
+    </script>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/modernizr.custom.js"></script>
