--- a/index.html
+++ b/index.html
@@ -638,10 +638,11 @@
                       </div>
 
                       <ul class="knowledges">
-                        <li>Gestion du temps</li>
+                        <li>Réflexion</li>
                         <li>Communication</li>
                         <li>Fléxibilité</li>
                         <li>Résolution de problèmes</li>
+                        <li>Créativité</li>
                       </ul>
                       <!-- End of Knowledges -->
                     </div>
