--- a/index.html
+++ b/index.html
@@ -627,6 +627,16 @@
                         </div>
                         <!-- End of Skill 8 -->
 
+                        <!-- Skill 9 -->
+                        <div class="skill clearfix">
+                          <h4>SQL</h4>
+                          <div class="skill-value">90%</div>
+                        </div>
+                        <div class="skill-container skill-5">
+                          <div class="skill-percentage"></div>
+                        </div>
+                        <!-- End of Skill 9 -->
+
                       </div>
                       <!-- End of Coding Skills -->
 
