--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <header id="site_header" class="header mobile-menu-hide">
             <div class="header-content">
               <div class="header-photo">
-                <img src="img/MonAvatar.png" alt="Gwenaël Deniel">
+                <img src="img/drip.png" alt="Gwenaël Deniel">
               </div>
               <div class="header-titles">
                 <h2>Deniel Gwenaël</h2>
@@ -830,18 +830,96 @@
                             </div>
                           </figure>
 
-
-
-                          <!--2ème année-->
-                          <!--<figure class="item standard" data-groups='["category_all", "category_2"]'>
-                            <div class="portfolio-item-img">
-                              <img src="img/portfolio/2.jpg" alt="Media Project 2" title="" />
-                              <a href="portfolio-1.html" class="ajax-page-load"></a>
+                          <figure class="item" data-groups='["category_all", "category_2"]'>
+                            <div class="flex-column">
+                              <!--Présentation Auto ecole software-->
+                              <div class="container">
+                                <h2 class="vcentered">Projet auto-ecole software</h2>
+                                <br>
+                                <div class="row">
+                                  <div class="col">
+                                    <h4>Présentation du <strong>Projet</strong></h4>
+                                    <p>
+                                      Ce projet a pour but de gérer une auto-école. Sur ce dernier il est notamment possible de prendre rendez-vous pour des leçons, ainsi que
+                                      de consulter son planning et quelques statistiques diverses.
+                                    </p>
+                                  </div>
+                                  <div class="col">
+                                    <div class="skills-info skills-second-style">
+                                      <!-- Skill 1 -->
+                                      <div class="skill clearfix">
+                                        <h4>JAVA</h4>
+                                        <div class="skill-value">100%</div>
+                                      </div>
+                                      <div class="skill-container skill-7">
+                                        <div class="skill-percentage"></div>
+                                      </div>
+                                      <!-- End of Skill 1 -->
+                                      <!-- Skill 2 -->
+                                      <div class="skill clearfix">
+                                        <h4>Ma contribution</h4>
+                                        <div class="skill-value">50%</div>
+                                      </div>
+                                      <div class="skill-container skill-10">
+                                        <div class="skill-percentage"></div>
+                                      </div>
+                                      <!-- End of Skill 2 -->
+                                    </div>
+                                  </div>
+                                </div>
+                                <br>
+                                <div class="row">
+                                  <div class="col">
+                                    <img src="img/lecon.png">
+                                  </div>
+                                  <div class="col">
+                                    <h4>Prise de rendez-vous</h4>
+                                    <p>
+                                      Sur la page de rendez-vous l'élève pourra choisir son moniteur ainsi que son véhicule en fonction de la date et de la catégorie du permis.
+                                      <!--utile pour le tableau de compétence-->
+                                      <!--<a href="" onclick="window.open('img/portfolio/usecase.png','targetWindow', 'toolbar=no, location=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1090px, height=550px, top=25px left=120px'); return false;">click here</a>-->
+                                    </p>
+                                  </div>
+                                </div>
+                                <br>
+                                <br>
+                                <div class="row">
+                                  <div class="col">
+                                    <h4>Les statistiques</h4>
+                                    <p>
+                                      Sur cette page l'élève peut consulter diverses statistiques concernant une catégorie de permis en particulier.
+                                    </p>
+                                  </div>
+                                  <div class="col">
+                                    <br>
+                                    <img src="img/stats.png" style="width: 100%; height: auto;">
+                                  </div>
+                                </div>
+                                <br>
+                                <br>
+                                <div class="row">
+                                  <div class="col">
+                                    <img src="img/planning.png" style="width: 100%; height: auto;">
+                                  </div>
+                                  <div class="col" style="margin-left: 20px;">
+                                    <h4>Le planning</h4>
+                                    <p>
+                                      Ce planning permet de consulter différents emplois du temps en fonction de plusieurs paramètres notamment:
+                                    </p>
+                                    <ul>
+                                      <li>Les dates de début et de fin</li>
+                                      <li>La catégorie de personne ou simplement une personne en particulier</li>
+                                      <li>La catégorie du permis</li>
+                                    </ul>
+                                  </div>
+                                </div>
+                              </div>
                             </div>
-                            <h4 class="name">Detailed Project 2</h4>
-                            <span class="category">Detailed</span>
                           </figure>
-                        </div>-->
+
+
+
+
                       </div>
                        <!--End of Portfolio Content-->
                     </div>
