--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 
                       <!-- Coding Skills -->
                       <div class="block-title">
-                        <h3>Coding <span>Skills</span></h3>
+                        <h3>Langages et <span>outils</span></h3>
                       </div>
 
                       <div class="skills-info skills-second-style">
