--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
                                 <div class="row">
                                   <div class="col">
                                     <a href="" onclick="window.open('img/connnexion.png','targetWindow', 'toolbar=no, location=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1920px, height=1080px, top=25px left=120px'); return false;">
-                                      <img src="img/connnexion.png" class="portfolio-item-img">
+                                      <img src="img/connnexion.png" class="portfolio-item-img" style="width: 70%;">
                                     </a>
                                   </div>
                                   <br>
@@ -1026,6 +1026,9 @@
                                       Sur cette page de connexion, l'utilisateur a le choix de se connecter ou de s'inscrire. Selon le role que joue cette personne dans l'auto-école, elle
                                       sera redirigée en conséquence.
                                     </p>
+                                    <br>
+                                    <br>
+                                    <br>
                                   </div>
                                 </div>
                                 <br>
@@ -1037,10 +1040,12 @@
                                       <!--utile pour le tableau de compétence-->
                                       <!--<a href="" onclick="window.open('img/portfolio/usecase.png','targetWindow', 'toolbar=no, location=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1090px, height=550px, top=25px left=120px'); return false;">click here</a>-->
                                     </p>
+                                    <br>
+                                    <br>
                                   </div>
                                   <div class="col">
                                     <a href="" onclick="window.open('img/lecon.png','targetWindow', 'toolbar=no, location=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1920px, height=1080px, top=25px left=120px'); return false;">
-                                      <img src="img/lecon.png">
+                                      <img src="img/lecon.png" style="width: 70%;">
                                     </a>
                                   </div>
                                 </div>
@@ -1050,7 +1055,7 @@
                                   <div class="col">
                                     <br>
                                     <a href="" onclick="window.open('img/stats.png','targetWindow', 'toolbar=no, location=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1920px, height=1080px, top=25px left=120px'); return false;">
-                                      <img src="img/stats.png" style="width: 100%; height: auto;">
+                                      <img src="img/stats.png" style="width: 70%;">
                                     </a>
                                   </div>
                                   <div class="col">
@@ -1058,6 +1063,11 @@
                                     <p>
                                       Sur cette page l'élève peut consulter diverses statistiques concernant une catégorie de permis en particulier.
                                     </p>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
                                   </div>
                                 </div>
                                 <br>
